--- a/.gitconfig
+++ b/.gitconfig
@@ -60,5 +60,5 @@
 [rerere]
   enabled = true
 [user]
-  email = dev@bendyworks.com
-  name = "Bendyworks Pair"
+  email = jeff.carley@gmail.com
+  name = "Jefferson Carley"
