--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,10 +46,10 @@ bind -r H resize-pane -L 5
 bind -r L resize-pane -R 5
 
 # allow use of the mouse in tmux
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
 
 # center window list
 set -g status-justify left
