--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,7 @@
 #set-option -g default-command "reattach-to-user-namespace -l bash"
+
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 set -g default-terminal "screen-256color"
 
 # act like GNU screen
