--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,10 +53,6 @@ set -g mouse-select-window on
 # center window list
 set -g status-justify left
 
-# visual aid for window activity
-setw -g monitor-activity on
-set -g visual-activity on
-
 # set color palette
 set -g status-fg white
 set -g status-bg black
@@ -96,7 +92,7 @@ set -g status-right "#[fg=cyan]%d %b %R"
 set -g status-utf8 on
 
 # update the status bar every 60 seconds
-set -g status-interval 60
+# set -g status-interval 60
 
 # keybindings for temporarily maximizing a pane
 unbind Up
@@ -104,6 +100,13 @@ bind Up new -d -n tmp \; swap-pane -s tmp.0 \; select-window -t tmp
 
 unbind Down
 bind Down last-window \; swap-pane -s tmp.0 \; kill-window -t tmp
+
+# visual aid for window activity
+setw -g automatic-rename off
+# set -g automatic-rename off
+# set-window-option -g automatic-rename off
+setw -g monitor-activity on
+set -g visual-activity on
 
 #set-option -g default-command "reattach-to-user-namespace -l bash"
 set-option -g default-command "reattach-to-user-namespace -l zsh"
