--- a/.tmux.conf
+++ b/.tmux.conf
@@ -90,14 +90,17 @@ set -g status-left-length 40
 set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 
 # right status line colors
-set -g status-right-length 40
-set -g status-right "#[fg=cyan]%d %b %R"
+# set -g status-right "#[fg=cyan]%d %b %R"
+set -g status-right-length 90
+set -g status-right "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors 2)#[default]"
 
 # Allow for utf8 characters
 set -g status-utf8 on
 
 # update the status bar every 60 seconds
-set -g status-interval 60
+# set -g status-interval 60
+set -g status-interval 2
+
 
 # keybindings for temporarily maximizing a pane
 unbind Up
@@ -106,5 +109,5 @@ bind Up new -d -n tmp \; swap-pane -s tmp.0 \; select-window -t tmp
 unbind Down
 bind Down last-window \; swap-pane -s tmp.0 \; kill-window -t tmp
 
-#set-option -g default-command "reattach-to-user-namespace -l bash"
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 set-option -g default-command "reattach-to-user-namespace -l zsh"
