--- a/.gitconfig
+++ b/.gitconfig
@@ -33,7 +33,7 @@
   editor = vim
   whitespace = warn
 [diff]
-  tool = gvimdiff
+  tool = vimdiff
 [difftool]
   prompt = false
 [help]
@@ -73,3 +73,5 @@
   helper = osxkeychain
 [mergetool]
 	keepBackup = false
+[init]
+	templatedir = ~/.git_template
