--- a/.gitconfig
+++ b/.gitconfig
@@ -6,6 +6,7 @@
   co = checkout
   cp = cherry-pick
   df = diff -a -w
+  fuckit = reset --hard
   dw = diff -a -w --word-diff
   lg = log --graph  --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=local
   fixup = !sh -c 'git commit -m \"fixup! $(git log -1 --format='\\''%s'\\'' $@)\"' -
