--- a/.tmux.conf
+++ b/.tmux.conf
@@ -111,3 +111,4 @@ bind Down last-window \; swap-pane -s tmp.0 \; kill-window -t tmp
 
 bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-shell /bin/zsh
