--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,7 @@
 set -g default-terminal "screen-256color"
 
+set-option -g history-limit 5000
+
 # visual aid for window activity
 setw -g automatic-rename off
 setw -g monitor-activity off
@@ -92,7 +94,7 @@ set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 # right status line colors
 # set -g status-right "#[fg=cyan]%d %b %R"
 set -g status-right-length 90
-set -g status-right "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors 2)#[default]"
+set -g status-right "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2)#[default]"
 
 # Allow for utf8 characters
 set -g status-utf8 on
