--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,10 +52,10 @@ bind -r H resize-pane -L 5
 bind -r L resize-pane -R 5
 
 # allow use of the mouse in tmux
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+setw -g mouse on
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on
+# set -g mouse-select-window on
 
 # center window list
 set -g status-justify left
