--- a/.gitconfig
+++ b/.gitconfig
@@ -26,6 +26,8 @@
   glog =  log --all --pretty='format:%d %Cgreen%h%Creset %an - %s' --
   unpulled = !"PROJ_BRANCH=$(git symbolic-ref HEAD | sed 's|refs/heads/||') && git fetch && git log HEAD..origin/$PROJ_BRANCH"
   unpushed = !"PROJ_BRANCH=$(git symbolic-ref HEAD | sed 's|refs/heads/||') && git log origin/$PROJ_BRANCH..HEAD"
+[commit]
+  template = ~/.gitmessage
 [color]
   branch = auto
   diff = auto
