--- a/.tmux.conf
+++ b/.tmux.conf
@@ -97,7 +97,7 @@ set -g status-right-length 90
 set -g status-right "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2)#[default]"
 
 # Allow for utf8 characters
-set -g status-utf8 on
+# set -g status-utf8 on
 
 # update the status bar every 60 seconds
 # set -g status-interval 60
