--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,8 +38,12 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+
+# bind -t vi-copy 'v' begin-selection
+# bind -t vi-copy 'y' copy-selection
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+
 
 # cycle through the windows
 bind-key -r C-h select-window -t :-
@@ -111,6 +115,6 @@ bind Up new -d -n tmp \; swap-pane -s tmp.0 \; select-window -t tmp
 unbind Down
 bind Down last-window \; swap-pane -s tmp.0 \; kill-window -t tmp
 
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 set-option -g default-shell /usr/local/bin/zsh
