--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
-set -g default-terminal "screen-256color"
+set -g default-terminal 'screen-256color'
+set -gs terminal-overrides ',*-256color:Tc'
 
 set-option -g history-limit 5000
 
@@ -115,8 +116,5 @@ bind Up new -d -n tmp \; swap-pane -s tmp.0 \; select-window -t tmp
 unbind Down
 bind Down last-window \; swap-pane -s tmp.0 \; kill-window -t tmp
 
-# bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-# set-option -g default-shell /usr/bin/zsh
-if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
-
+set-option -g default-shell /usr/local/bin/zsh
 
