--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 set -g default-terminal 'screen-256color'
 set -gs terminal-overrides ',*-256color:Tc'
 
+set-option -g set-clipboard on
+
 set-option -g history-limit 5000
 
 # visual aid for window activity
@@ -43,8 +45,8 @@ bind p paste-buffer
 # bind -t vi-copy 'v' begin-selection
 # bind -t vi-copy 'y' copy-selection
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-selection
-
+# bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # cycle through the windows
 bind-key -r C-h select-window -t :-
