--- a/.gitconfig
+++ b/.gitconfig
@@ -24,7 +24,7 @@
   tagcommit = rev-list -n 1 --abbrev-commit
   tr = log --graph --oneline --decorate --color
   tree = log --graph --oneline --decorate --color --all
-  tweak = commit --amend -C HEAD
+  tweak = commit --amend
   glog =  log --all --pretty='format:%d %Cgreen%h%Creset %an - %s' --
   unpulled = !"PROJ_BRANCH=$(git symbolic-ref HEAD | sed 's|refs/heads/||') && git fetch && git log HEAD..origin/$PROJ_BRANCH"
   unpushed = !"PROJ_BRANCH=$(git symbolic-ref HEAD | sed 's|refs/heads/||') && git log origin/$PROJ_BRANCH..HEAD"
@@ -51,7 +51,7 @@
   enabled = true
 [user]
 	name = Jeff Carley
-	email = jeff@datica.com
+	email = jcarley@abodo.com
 [http]
 	sslVerify = true
 [credential]
