--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,36 +72,31 @@ set -g status-fg white
 set -g status-bg black
 
 # regular window colors
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
+setw -g window-status-format "#[fg=cyan,bg=default,dim]#W #I"
 
 # active window colors
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+setw -g window-status-current-format "#[fg=white,bg=red,bright]#W #I"
 
 # regular pane colors
-set -g pane-border-fg white
-set -g pane-border-bg black
+set -g pane-border-format "#[fg=white,bg=black]"
 
 # active pane colors
-set -g pane-active-border-fg white
-set -g pane-active-border-bg black
+set -g pane-active-border-style fg=white
+set -g pane-active-border-style bg=black
 
 # command line colors
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+set -g message-style fg=white
+set -g message-style bg=black
+# set -g message-attr bright
 
 # left status line colors
 set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P "
 
 # right status line colors
 # set -g status-right "#[fg=cyan]%d %b %R"
 set -g status-right-length 90
-set -g status-right "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2)#[default]"
+set -g status-right "#[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2)#[default]"
 
 # Allow for utf8 characters
 # set -g status-utf8 on
