--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,10 +72,10 @@ set -g status-fg white
 set -g status-bg black
 
 # regular window colors
-setw -g window-status-format "#[fg=cyan,bg=default,dim]#W #I"
+setw -g window-status-format "#[fg=cyan,bg=default,dim]#W#F #I"
 
 # active window colors
-setw -g window-status-current-format "#[fg=white,bg=red,bright]#W #I"
+setw -g window-status-current-format "#[fg=white,bg=red,bright]#W#F #I"
 
 # regular pane colors
 set -g pane-border-format "#[fg=white,bg=black]"
