--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,8 +45,8 @@ bind p paste-buffer
 # bind -t vi-copy 'v' begin-selection
 # bind -t vi-copy 'y' copy-selection
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-# bind-key -Tcopy-mode-vi 'y' send -X copy-selection
-bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+# bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # cycle through the windows
 bind-key -r C-h select-window -t :-
@@ -96,7 +96,7 @@ set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P "
 # right status line colors
 # set -g status-right "#[fg=cyan]%d %b %R"
 set -g status-right-length 90
-set -g status-right "#[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2)#[default]"
+# set -g status-right "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2)#[default]"
 
 # Allow for utf8 characters
 # set -g status-utf8 on
@@ -113,5 +113,5 @@ bind Up new -d -n tmp \; swap-pane -s tmp.0 \; select-window -t tmp
 unbind Down
 bind Down last-window \; swap-pane -s tmp.0 \; kill-window -t tmp
 
-set-option -g default-shell /usr/local/bin/zsh
+set-option -g default-shell /usr/bin/zsh
 
