--- a/.tmux.conf
+++ b/.tmux.conf
@@ -113,5 +113,6 @@ bind Up new -d -n tmp \; swap-pane -s tmp.0 \; select-window -t tmp
 unbind Down
 bind Down last-window \; swap-pane -s tmp.0 \; kill-window -t tmp
 
-set-option -g default-shell /usr/local/bin/zsh
+# set-option -g default-shell /usr/local/bin/zsh
+set-option -g default-shell /bin/zsh
 
