--- a/local.yml
+++ b/local.yml
@@ -7,6 +7,7 @@
           - htop
           - curl
           - git
+          - neovim
         update_cache: yes
         cache_valid_time: 3600
 
