--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,10 +42,14 @@ bind Escape copy-mode
 unbind p
 bind p paste-buffer
 
-# bind -t vi-copy 'v' begin-selection
-# bind -t vi-copy 'y' copy-selection
-bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+
+# Copy/Paste to system clipboard for Linux
+#bind -t vi-copy 'v' begin-selection
+#bind -t vi-copy 'y' copy-selection
+
+# Copy/Paste to system clipboard for Mac OSX
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
 # bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # cycle through the windows
