--- a/local.yml
+++ b/local.yml
@@ -1,13 +1,22 @@
 - hosts: localhost
   become: true
+  gather_facts: yes
+  connection: local
+
   tasks:
     - name: Install packages
       apt:
-        pkg:
+        name:
           - htop
           - curl
           - git
           - neovim
+          - jq
+          - tree
+          - watch
+          - silversearcher-ag
+          - direnv
+        state: latest
         update_cache: yes
         cache_valid_time: 3600
 
@@ -18,3 +27,6 @@
     - name: Remove dependencies that are no longer required
       apt:
         autoremove: yes
+
+
+
