--- a/coc-settings.json
+++ b/coc-settings.json
@@ -6,5 +6,6 @@
       "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
       "filetypes": ["go"]
     }
-  }
+  },
+  "solargraph.useBundler": "true"
 }
