--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,5 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "typescript", "javascript", "vue"],
+  "coc.preferences.formatOnSaveFiletypes": ["ruby", "css", "markdown", "typescript", "javascript", "vue"],
   "languageserver": {
     "golang": {
       "command": "gopls",
